--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "chance": "^1.0.2",
     "express": "^4.17.1",
+    "jquery": "^3.5.1",
     "md5": "^2.3.0"
   },
   "devDependencies": {
